# pydatagovgr

./: .coveragerc  .gitignore  .readthedocs.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  mkdocs.yml  pyproject.toml
.github/: SECURITY.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: cd.yml  ci.yml  codeql-analysis.yml  python-package.yml  python-publish.yml
docs/: acknowledgements.md  api.md  contributing.md  features.md  index.md  installation.md  license.md  related.md  requirements.txt
docs/usage/: not_so_quick.md  quick.md
pydatagovgr/: __init__.py  adapters.py  base_client.py  client.py  exceptions.py  session.py
tests/: test_client.py  test_exceptions.py
