[tool.poetry]
name = "pydatagovgr"
version = "0.2.2"
description = "A Pythonic client for the official https://data.gov.gr API."
authors = ["ilias-ant <ilias.antonopoulos@yahoo.gr>"]
readme = "README.md"
license = "MIT"
homepage = "https://pypi.org/project/pydatagovgr"
documentation = "https://pydatagovgr.readthedocs.io"
repository = "https://github.com/ilias-ant/pydatagovgr"
keywords = ["client", "pip", "govgr", "open-data"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Information Technology",
    "Intended Audience :: Science/Research",
    "Natural Language :: English",
    "Natural Language :: Greek",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Programming Language :: Python :: 3 :: Only",
    
]

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/ilias-ant/pydatagovgr/issues"

[tool.poetry.dependencies]
python = ">=3.7,<3.11"
requests = "~2.25.1"

[tool.poetry.dev-dependencies]
black = "^22.6.0"
isort = "^5.10.1"
pytest = "^7.1.2"
pytest-cov = "^3.0.0"
responses = "^0.21.0"
mkdocs = "^1.3.1"
mkdocs-material = "^8.3.9"
mkdocstrings = {version = "^0.19.0", extras = ["python"]}  # ModuleNotFoundError: No module named 'mkdocstrings.handlers.python'

[tool.black]
line-length = 88
skip-string-normalization = true
target-version = ['py37', 'py38']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | \.pytest_cache
  | \.test_coverage
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
filterwarnings = []  # https://docs.pytest.org/en/stable/warnings.html

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
